Edit for service

--- a/thanks.html
+++ b/thanks.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>サンクスページのサンプル</title>
+    <title>お問い合わせありがとうございました</title>
     <meta name="robots" content="noindex,nofollow" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="stylesheet" href="css/reset.css" />
@@ -19,12 +19,16 @@
 <body>
 
     <div id="thanks">
-
-        <h1>お問い合わせありがとうございました。</h1>
-        <p>これはサンクスページのサンプルです。<br />自由に書き換えたりしてご利用ください。</p>
-        <p>設置に関してわからない点や不具合などがありましたら、<a href="https://www.1-firststep.com/samplephp/support-bbs/" target="_blank">サポートBBS</a>からお願いします。</p>
-        <p>無償サポートは初期状態での設置に関する質問だけであり、既存サイトへの組み込みやカスタマイズに関する内容は有料になります。(初期状態の定義については、サポートBBSをご覧ください)</p>
-        <p>カスタマイズの料金はご希望の仕様によって異なります。<a href="https://www.1-firststep.com/contact/inquiry" target="_blank">お問い合わせページ</a>からご相談ください。</p>
+        <h1>お問い合わせいただきありがとうございます。</h1>
+        <br>
+        <p>ご記載いただいたメールアドレス宛てに自動返信メールをお送りしております。</p>
+        <br>
+        <p>※自動返信メールが届いていない場合は、お問い合わせが完了しておりません。</p>
+        <p>迷惑メールフォルダに振り分けられていることがございます。</p>
+        <p>恐れ入りますがご確認ください。</p>
+        <br>
+        <p>返信ご希望の方のみ、お送りいただきました内容を確認の上、折り返しご連絡させていただきます。</p>
+        <p>引き続き<a href="https://studynrecord.com">StudyRecord</a>をよろしくお願いします。</p>
     </div>
 
 </body>
